{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 28,
  "lineage": "c6bc2ae0-d67a-1a9a-2f94-134d05a15db2",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-063fd45469b67083e",
            "arn": "arn:aws:ec2:us-west-2:504649076991:instance/i-010053e7dc25b1efb",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010053e7dc25b1efb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "wu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0db5a95bf047933d2"
              }
            ],
            "primary_network_interface_id": "eni-0db5a95bf047933d2",
            "private_dns": "ip-10-0-1-252.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.252",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02cb806027fe160e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba190345f734fe58",
            "tags": {
              "Name": "wu-test-priv-ec2"
            },
            "tags_all": {
              "Name": "wu-test-priv-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06285141fc3708f84"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "i-010053e7dc25b1efb",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux",
            "module.security.aws_security_group.private_sg",
            "module.security.aws_security_group.public_sg",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-063fd45469b67083e",
            "arn": "arn:aws:ec2:us-west-2:504649076991:instance/i-0fcbd5922284e9ce6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fcbd5922284e9ce6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "wu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09249efcf4ae3d2ea"
              }
            ],
            "primary_network_interface_id": "eni-09249efcf4ae3d2ea",
            "private_dns": "ip-10-0-0-182.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.182",
            "public_dns": "ec2-54-202-210-86.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.210.86",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dca8ee01ad34eea3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bc3a1f8673ab48f",
            "tags": {
              "Name": "wu-test-public-ec2"
            },
            "tags_all": {
              "Name": "wu-test-public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d47d3ad394de82da"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "i-0fcbd5922284e9ce6",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux",
            "module.security.aws_security_group.public_sg",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:vpc-endpoint/vpce-04c80b930baf2dab8",
            "cidr_blocks": [
              "3.5.76.0/22",
              "16.12.96.0/20",
              "16.12.112.0/21",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "16.12.88.0/21",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04c80b930baf2dab8",
            "ip_address_type": "ipv4",
            "owner_id": "504649076991",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "region": "us-west-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0226a3eab2ef03747"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "service_region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "wu-test-s3-endpoint"
            },
            "tags_all": {
              "Name": "wu-test-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0deba3ec03797192d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "vpce-04c80b930baf2dab8",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:internet-gateway/igw-0a6899c57f3ec8d5f",
            "id": "igw-0a6899c57f3ec8d5f",
            "owner_id": "504649076991",
            "region": "us-west-2",
            "tags": {
              "Environment": "wu-test",
              "Name": "wu-test-igw"
            },
            "tags_all": {
              "Environment": "wu-test",
              "Name": "wu-test-igw"
            },
            "vpc_id": "vpc-0deba3ec03797192d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be496b45f08e72e1",
            "arn": "arn:aws:ec2:us-west-2:504649076991:elastic-ip/eipalloc-0be496b45f08e72e1",
            "domain": "vpc",
            "id": "eipalloc-0be496b45f08e72e1",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-214-16-135.us-west-2.compute.amazonaws.com",
            "public_ip": "54.214.16.135",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "wu-test-nat-eip"
            },
            "tags_all": {
              "Name": "wu-test-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be496b45f08e72e1",
            "association_id": "eipassoc-09aba72060219cf28",
            "connectivity_type": "public",
            "id": "nat-067e813e4dbecb8d3",
            "network_interface_id": "eni-0ce56a86647eb5023",
            "private_ip": "10.0.0.86",
            "public_ip": "54.214.16.135",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06bc3a1f8673ab48f",
            "tags": {
              "Name": "wu-test-natgw"
            },
            "tags_all": {
              "Name": "wu-test-natgw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0226a3eab2ef037471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-067e813e4dbecb8d3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0226a3eab2ef03747",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0226a3eab2ef03747"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.this",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a6899c57f3ec8d5f",
            "id": "r-rtb-023e831e0c2b48cb41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-023e831e0c2b48cb4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-023e831e0c2b48cb4"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.route_tables.aws_route_table.public_rt",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:route-table/rtb-0226a3eab2ef03747",
            "id": "rtb-0226a3eab2ef03747",
            "owner_id": "504649076991",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "wu-test-private-rt"
            },
            "tags_all": {
              "Name": "wu-test-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deba3ec03797192d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "rtb-0226a3eab2ef03747",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:route-table/rtb-023e831e0c2b48cb4",
            "id": "rtb-023e831e0c2b48cb4",
            "owner_id": "504649076991",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "wu-test-public-rt"
            },
            "tags_all": {
              "Name": "wu-test-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deba3ec03797192d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "rtb-023e831e0c2b48cb4",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac6c8dcb9afac96e",
            "region": "us-west-2",
            "route_table_id": "rtb-0226a3eab2ef03747",
            "subnet_id": "subnet-0ba190345f734fe58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04335976fad7f6868",
            "region": "us-west-2",
            "route_table_id": "rtb-0226a3eab2ef03747",
            "subnet_id": "subnet-0e871ea532882b1c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089b58cda3523a119",
            "region": "us-west-2",
            "route_table_id": "rtb-023e831e0c2b48cb4",
            "subnet_id": "subnet-06bc3a1f8673ab48f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0563c9dd9d4a42195",
            "region": "us-west-2",
            "route_table_id": "rtb-023e831e0c2b48cb4",
            "subnet_id": "subnet-0527908d4164bbfb9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:security-group/sg-06285141fc3708f84",
            "description": "Private SG - allow SSH from public SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06285141fc3708f84",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from public SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d47d3ad394de82da"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wu-test-private-sg",
            "name_prefix": "",
            "owner_id": "504649076991",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wu-test-private-sg"
            },
            "tags_all": {
              "Name": "wu-test-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deba3ec03797192d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "sg-06285141fc3708f84",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.security.aws_security_group.public_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:security-group/sg-0d47d3ad394de82da",
            "description": "Public SG - allow SSH from my IP and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d47d3ad394de82da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wu-test-public-sg",
            "name_prefix": "",
            "owner_id": "504649076991",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wu-test-public-sg"
            },
            "tags_all": {
              "Name": "wu-test-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deba3ec03797192d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "sg-0d47d3ad394de82da",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:subnet/subnet-0ba190345f734fe58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba190345f734fe58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "504649076991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "wu-test",
              "Name": "wu-test-private-0"
            },
            "tags_all": {
              "Environment": "wu-test",
              "Name": "wu-test-private-0"
            },
            "vpc_id": "vpc-0deba3ec03797192d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "subnet-0ba190345f734fe58",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:subnet/subnet-0e871ea532882b1c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e871ea532882b1c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "504649076991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "wu-test",
              "Name": "wu-test-private-1"
            },
            "tags_all": {
              "Environment": "wu-test",
              "Name": "wu-test-private-1"
            },
            "vpc_id": "vpc-0deba3ec03797192d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "subnet-0e871ea532882b1c9",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:subnet/subnet-06bc3a1f8673ab48f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bc3a1f8673ab48f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504649076991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "wu-test",
              "Name": "wu-test-public-0"
            },
            "tags_all": {
              "Environment": "wu-test",
              "Name": "wu-test-public-0"
            },
            "vpc_id": "vpc-0deba3ec03797192d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "subnet-06bc3a1f8673ab48f",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:subnet/subnet-0527908d4164bbfb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0527908d4164bbfb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504649076991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "wu-test",
              "Name": "wu-test-public-1"
            },
            "tags_all": {
              "Environment": "wu-test",
              "Name": "wu-test-public-1"
            },
            "vpc_id": "vpc-0deba3ec03797192d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "subnet-0527908d4164bbfb9",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:vpc/vpc-0deba3ec03797192d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0876236fe2a3c2924",
            "default_route_table_id": "rtb-0c7e6b166e9cdc925",
            "default_security_group_id": "sg-0a92ef4ecb8a09677",
            "dhcp_options_id": "dopt-04ce359903ec5a75b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0deba3ec03797192d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7e6b166e9cdc925",
            "owner_id": "504649076991",
            "region": "us-west-2",
            "tags": {
              "Environment": "sandbox",
              "Name": "wu-test-vpc"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "wu-test-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "vpc-0deba3ec03797192d",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}